--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header id="titulo">
             <br/><br/>
             <h1>As Ultimas Noticias</h1>
-            <img id="logo" src="imagens/log.png"/>
+            <img id="logo" src="imagens/5.png"/>
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ol>
@@ -25,6 +25,15 @@
                 </ol>
             </nav>
         </header>
+        <section id="esquerdo">
+            Seçao esquerda
+        </section>
+        <section id="meio">
+            Seçao meio
+        </section>
+        <aside id="direita">
+            Aside direita
+        </aside>
     </div>
 </body>
 </html>
