--- a/index.html
+++ b/index.html
@@ -26,14 +26,222 @@
             </nav>
         </header>
         <section id="esquerdo">
-            Seçao esquerda
+            <article class="noticia">
+                <h2 class="titulo">Anime News Network</h2>
+                <h2 class="descricao">15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </h2>
+            </article>
+            <article class="noticia">
+                <h2 class="titulo">Anime News Network</h2>
+                <h2 class="descricao">15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </h2>
+            </article>
+            <article class="noticia">
+                <h2 class="titulo">Anime News Network</h2>
+                <h2 class="descricao">15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </h2>
+            </article>
+            <article class="noticia">
+                <h2 class="titulo">Anime News Network</h2>
+                <h2 class="descricao">15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </h2>
+            </article>
+            <article class="noticia">
+                <h2 class="titulo">Anime News Network</h2>
+                <h2 class="descricao">15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </h2>
+            </article>
         </section>
         <section id="meio">
-            Seçao meio
+            <div class="zoom">
+                <img src="imagens/2.jpg" alt="">
+            </div>
+            <div class="zoom">
+                <img src="imagens/2.jpg" alt="">
+            </div>
+            <div class="zoom">
+                <img src="imagens/2.jpg" alt="">
+            </div>
+            <div class="zoom">
+                <img src="imagens/2.jpg" alt="">
+            </div>
         </section>
-        <aside id="direita">
-            Aside direita
+        <aside id="direito">
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia2">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
+            <div class="noticia3">
+                <img src="imagens/3.jpg" alt="">
+                <p>15 manga are nominated in 3 categories for this year's 
+                    Kodansha Manga Awards, including three manga that were also nominated last year.
+                </p>
+            </div>
         </aside>
+        <footer id="rodape">
+            <ol class="itemlink">
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+            </ol>
+            <nav id="redes">
+                <ol>
+                    <li><a href="paginas/contrucao.html"><img src="imagens/6.png" alt=""></a></li>
+                    <li><a href="paginas/contrucao.html"><img src="imagens/6.png" alt=""></a></li>
+                    <li><a href="paginas/contrucao.html"><img src="imagens/6.png" alt=""></a></li>
+                </ol>
+            </nav>
+            <div id="rodapefinal">
+                Todos os direitos reservados a @Roberto Rocha.
+            </div>
+        </footer>
     </div>
 </body>
 </html>
