paginas fotos, videos, contato e construçao

--- a/index.html
+++ b/index.html
@@ -219,23 +219,23 @@
         </aside>
         <footer id="rodape">
             <ol class="itemlink">
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
-                <li><a href="paginas/contrucao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
+                <li><a href="paginas/construcao.html">Fale conosco</a></li>
             </ol>
             <nav id="redes">
                 <ol>
-                    <li><a href="paginas/contrucao.html"><img src="imagens/6.png" alt=""></a></li>
-                    <li><a href="paginas/contrucao.html"><img src="imagens/6.png" alt=""></a></li>
-                    <li><a href="paginas/contrucao.html"><img src="imagens/6.png" alt=""></a></li>
+                    <li><a href="paginas/construcao.html"><img src="imagens/6.png" alt=""></a></li>
+                    <li><a href="paginas/construcao.html"><img src="imagens/6.png" alt=""></a></li>
+                    <li><a href="paginas/construcao.html"><img src="imagens/6.png" alt=""></a></li>
                 </ol>
             </nav>
             <div id="rodapefinal">
